--- a/chariot-web/src/components/Button/Button.module.scss
+++ b/chariot-web/src/components/Button/Button.module.scss
@@ -9,6 +9,16 @@
 	text-align: center;
 }
 
+.selected {
+	background-color: black;
+	color: white;
+}
+
+.voted {
+	background-color: #BBF65A;
+	color: black;
+}
+
 .full {
 	width: 18vh;
 	height: 18vh;
