--- a/chariot-web/src/components/Button/Button.module.scss
+++ b/chariot-web/src/components/Button/Button.module.scss
@@ -7,6 +7,7 @@
 	padding: 1em;
 	margin: auto;
 	text-align: center;
+	background-color: white;
 }
 
 .selected {
@@ -21,7 +22,6 @@
 
 .full {
 	width: 18vh;
-	height: 18vh;
 }
 
 .button{
