--- a/chariot-web/src/components/Standings/Standings.module.scss
+++ b/chariot-web/src/components/Standings/Standings.module.scss
@@ -1,4 +1,11 @@
 .table {
-	width: 100%;
-	text-align: center;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	
+}
+.row {
+	// display: flex;
+	// flex-direction: row;
+	// justify-content: space-around;
 }
