--- a/chariot-web/src/components/Standings/Standings.module.scss
+++ b/chariot-web/src/components/Standings/Standings.module.scss
@@ -1,11 +1,94 @@
-.table {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	
+$table-header: #1976d2;
+$table-header-border: #1565c0;
+$table-border: #d9d9d9;
+$row-bg: #f4f2f1;
+$first-col-width: 60%;
+
+.div {
+  box-sizing: border-box;
 }
-.row {
-	// display: flex;
-	// flex-direction: row;
-	// justify-content: space-around;
+
+.table-container {
+  display: block;
+  margin: 2em auto;
+}
+
+/* might use for the chair icon*/
+.flag-icon {
+  margin-right: 0.1em;
+}
+
+.flex-table {
+  display: flex;
+  flex-flow: row wrap;
+  border-left: solid 1px $table-border;
+  transition: 0.5s;
+  &:first-of-type {
+    background: $table-header;
+    border-top: solid 1px $table-header-border;
+    border-left: solid 1px $table-header-border;
+  }
+  &:first-of-type .flex-row {
+    background: $table-header;
+    color: white;
+    border-color: $table-header-border;
+  }
+  &.row:nth-child(odd) .flex-row {
+    background: $row-bg;
+  }
+}
+
+.flex-row {
+  width: calc((100% - $first-col-width) / 3);
+  text-align: center;
+  padding: 0.5em 0.5em;
+  border-right: solid 1px $table-border;
+  border-bottom: solid 1px $table-border;
+}
+
+.first {
+  width: $first-col-width;
+}
+.rowspan {
+  display: flex;
+  flex-flow: row wrap;
+  align-items: flex-start;
+  justify-content: center;
+}
+
+.column {
+  display: flex;
+  flex-flow: column wrap;
+  width: 75%;
+  padding: 0;
+  .flex-row {
+    display: flex;
+    flex-flow: row wrap;
+    width: 100%;
+    padding: 0;
+    border: 0;
+    border-bottom: solid 1px $table-border;
+  }
+}
+
+.flex-cell {
+  width: calc(100% / 3); //1px = border right
+  text-align: center;
+  padding: 0.5em 0.5em;
+  border-right: solid 1px $table-border;
+  flex: 1 1 33.3%;
+}
+
+@media all and (max-width: 767px) {
+  .flex-row {
+    width: calc(100% / 2); //1px = border right
+
+    &.first {
+      width: 100%;
+    }
+  }
+
+  .column {
+    width: 100%;
+  }
 }
