--- a/chariot-web/styles/Defaults.module.scss
+++ b/chariot-web/styles/Defaults.module.scss
@@ -1,30 +1,78 @@
+$mobile-height: 20vh;
+$desktop-height: 40vh;
+$biggest-height: 50vh;
+
+@mixin setHeight($height) {
+  max-height: $height;
+  min-height: $height;
+}
+
 .main {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	background-repeat: no-repeat;
-	background-size: contain;
-	font-family: 'Press Start 2P';
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background-size: cover;
+  font-family: "Press Start 2P";
+  background-repeat: no-repeat;
 }
 
 .header {
-	text-align: center;
+  text-align: center;
+  //   @include setHeight($desktop-height);
 }
 
 .headerImage {
-	padding-top: 10%;
-	padding-left: 10%;
-	padding-right: 10%;
-	padding-bottom: 1%;
+  padding-top: 10%;
+  padding-left: 10%;
+  padding-right: 10%;
+  padding-bottom: 1%;
 }
 
 .headerText {
-	width: 100%;
-	padding: 2.5%;
-	background-color: white;
-	box-shadow: 5px 2.5px 5px;
+  width: 100%;
+  padding: 2.5%;
+  background-color: white;
+  box-shadow: 5px 2.5px 5px;
 }
 
 .rest {
-	padding-top: 20px;
+  padding-top: 20px;
+  //   @include setHeight(6(100vh - $desktop-height));
+}
+
+/* for the big screens, make sure we have the biggest header*/
+@media only screen and (min-width: 1000px) {
+  .main {
+    background-size: cover;
+  }
+  .header {
+    @include setHeight($biggest-height);
+  }
+  .rest {
+    @include setHeight(calc(100vh - $biggest-height));
+  }
+}
+/* for desktop, make sure we have a big header*/
+@media only screen and (max-width: 1000px) {
+  .main {
+    background-size: contain;
+  }
+  .header {
+    @include setHeight($desktop-height);
+  }
+  .rest {
+    @include setHeight(calc(100vh - $desktop-height));
+  }
+}
+/* for mobile, switch to the best reslution. Width set to BG.png's width */
+@media only screen and (max-width: 550px) {
+  .main {
+    background-size: contain;
+  }
+  .header {
+    @include setHeight($mobile-height);
+  }
+  .rest {
+    @include setHeight(calc(100vh - $mobile-height));
+  }
 }
