--- a/chariot-web/styles/Defaults.module.scss
+++ b/chariot-web/styles/Defaults.module.scss
@@ -1,20 +1,76 @@
+$mobile-height: 20vh;
+$desktop-height: 40vh;
+$biggest-height: 50vh;
+
+@mixin setHeight($height) {
+  max-height: $height;
+  min-height: $height;
+}
+
 .main {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background-size: cover;
+  font-family: "Press Start 2P";
+  background-repeat: no-repeat;
 }
 
 .header {
-	text-align: center;
-	font-family: 'Futura';
-	height: 22vh;
+  text-align: center;
+}
+
+.headerImage {
+  padding-top: 10%;
+  padding-left: 10%;
+  padding-right: 10%;
+  padding-bottom: 1%;
+}
+
+.headerText {
+  width: 100%;
+  padding: 2.5%;
+  background-color: white;
+  box-shadow: 5px 2.5px 5px;
 }
 
 .rest {
-	height: 78vh;
+  padding-top: 20px;
 }
-.headerText {
-	color: #0070f3;
-	line-height: 1.15;
-  	font-size: 4rem;
+
+/* for the big screens, make sure we have the biggest header*/
+@media only screen and (min-width: 1000px) {
+  .main {
+    background-size: cover;
+  }
+  .header {
+    @include setHeight($biggest-height);
+  }
+  .rest {
+    @include setHeight(calc(100vh - $biggest-height));
+  }
+}
+/* for desktop, make sure we have a big header*/
+@media only screen and (max-width: 1000px) {
+  .main {
+    background-size: contain;
+  }
+  .header {
+    @include setHeight($desktop-height);
+  }
+  .rest {
+    @include setHeight(calc(100vh - $desktop-height));
+  }
+}
+/* for mobile, switch to the best reslution. Width set to BG.png's width */
+@media only screen and (max-width: 550px) {
+  .main {
+    background-size: contain;
+  }
+  .header {
+    @include setHeight($mobile-height);
+  }
+  .rest {
+    @include setHeight(calc(100vh - $mobile-height));
+  }
 }
