vastly better ui

--- a/chariot-web/styles/Index.module.scss
+++ b/chariot-web/styles/Index.module.scss
@@ -1,7 +1,8 @@
-.textBox {
-	text-align: center;
-}
-
-.textBox input {
-	text-align: center;
+.container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
