--- a/chariot-web/pages/Game.module.scss
+++ b/chariot-web/pages/Game.module.scss
@@ -1,11 +1,36 @@
+.container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+}
+
 .buttonLayout {
-	display: flex;
-	flex-direction: column;
-	gap: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
 
 .standingsButton {
-	position: fixed;
-	bottom: 20px;
-	width: 100%;
+  position: fixed;
+  bottom: 20px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.blockText {
+  padding-left: 13.5px;
+  padding-right: 13.5px;
+  background-color: white;
+  box-shadow: 5px 2.5px 5px;
+  text-align: center;
+}
+
+.liveAudience {
+  display: flex;
+  justify-content: center;
 }
