--- a/chariot-web/styles/Defaults.module.scss
+++ b/chariot-web/styles/Defaults.module.scss
@@ -1,30 +1,44 @@
-$mobile-height: 20vh;
-$desktop-height: 40vh;
-$biggest-height: 50vh;
+$height: 30vh;
 
 @mixin setHeight($height) {
   max-height: $height;
   min-height: $height;
 }
 
+.backgroundImage {
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100vw;
+  height: 100vh;
+}
+
 .main {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  background-size: cover;
   font-family: "Press Start 2P";
-  background-repeat: no-repeat;
+  line-height: 1.2;
+  max-width: 375px;
+  flex-grow: 1;
 }
 
 .header {
   text-align: center;
+  padding-bottom: 35px;
 }
 
 .headerImage {
   padding-top: 10%;
   padding-left: 10%;
   padding-right: 10%;
-  padding-bottom: 1%;
+  padding-bottom: 10%;
+}
+
+.headerContainer {
+  height: 80.75px;
 }
 
 .headerText {
@@ -35,42 +49,5 @@ $biggest-height: 50vh;
 }
 
 .rest {
-  padding-top: 20px;
-}
-
-/* for the big screens, make sure we have the biggest header*/
-@media only screen and (min-width: 1000px) {
-  .main {
-    background-size: cover;
-  }
-  .header {
-    @include setHeight($biggest-height);
-  }
-  .rest {
-    @include setHeight(calc(100vh - $biggest-height));
-  }
-}
-/* for desktop, make sure we have a big header*/
-@media only screen and (max-width: 1000px) {
-  .main {
-    background-size: contain;
-  }
-  .header {
-    @include setHeight($desktop-height);
-  }
-  .rest {
-    @include setHeight(calc(100vh - $desktop-height));
-  }
-}
-/* for mobile, switch to the best reslution. Width set to BG.png's width */
-@media only screen and (max-width: 550px) {
-  .main {
-    background-size: contain;
-  }
-  .header {
-    @include setHeight($mobile-height);
-  }
-  .rest {
-    @include setHeight(calc(100vh - $mobile-height));
-  }
+  flex-grow: 1;
 }
