added percentages and ui bug for mobile

--- a/chariot-web/pages/Game.module.scss
+++ b/chariot-web/pages/Game.module.scss
@@ -14,8 +14,11 @@
 }
 
 .standingsButton {
-  position: fixed;
-  bottom: 20px;
+  //   position: fixed;
+  //   bottom: 20px;
+  //   justify-self: end;
+  margin-top: auto;
+  padding-bottom: 20px;
   width: 100%;
   display: flex;
   flex-direction: column;
