Web UI Improvements (#90)
* added percentages and ui bug for mobile

* changed vote times to 15 seconds and fixed percentage bug

* removed comments + checked against potential bug

--- a/chariot-web/pages/Game.module.scss
+++ b/chariot-web/pages/Game.module.scss
@@ -14,8 +14,8 @@
 }
 
 .standingsButton {
-  position: fixed;
-  bottom: 20px;
+  margin-top: auto;
+  padding-bottom: 20px;
   width: 100%;
   display: flex;
   flex-direction: column;
